Fix overflow-x bug when user picks a city button

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,7 @@ body {
     align-items: center;
     background-color: aliceblue;
     background-image: url("../images/background.gif");
+    overflow-x:hidden ;
 }
 
 /* Add card effect to menu. */
